[package]
name = "gdengine"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["macro", "text-processing", "game-design", "game-development"]
categories = ["command-line-utilities", "text-processing", "game-development"]
description = "Game design document creation tool"
homepage = "https://github.com/simhyeon/gdengine"
repository = "https://github.com/simhyeon/gdengine"
readme = "README.md"

[dependencies]
clap = "3.0.0-beta.2"
thiserror = "1.0.25"
lazy_static = "1.4.0"
serde_json = "1.0.64"
r4d = {version = "0.5.1", features = ["full"] }

[[bin]]
name = "gde"
path = "src/main.rs"
