[package]
name = "gdengine"
version = "0.3.2"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["macro", "text-processing", "game-design", "game-development"]
categories = ["command-line-utilities", "text-processing", "game-development"]
description = "Game design document creation tool"
homepage = "https://github.com/simhyeon/gdengine"
repository = "https://github.com/simhyeon/gdengine"
readme = "README.md"

[dependencies]
clap = { version = "3.0.0-beta.2", default-features = false, features = ["std"]}

thiserror = "1.0.25"
lazy_static = "1.4.0"
serde_json = "1.0.64"
r4d = {git = "https://github.com/simhyeon/r4d", version="0.11.0" ,features = ["full","color"] }
serde = {version = "1.0.126"}
gdlogue = "0.1.0"
reqwest = {version = "0.11.3",default-features = false, features =["rustls-tls","blocking", "cookies", "multipart"]}
dotenv = "0.15.0"

[[bin]]
name = "gde"
path = "src/main.rs"
